--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                                         </span>
                                                     </p>
                                                     <p>
-                                                        <span style="font-size:16px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#595959">3. Select <B style="color:#00925F"><em>SIM CARD CONTACTS</em></B>.
+                                                        <span style="font-size:16px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#595959">3. Select <B style="color:#00925F"><em>SIM card contacts</em></B>.
                                                         </span>
                                                     </p>
                                                     <p style="text-align:center">
