--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                                         </span>
                                                     </p>
                                                     <p>
-                                                        <span style="font-size:16px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#595959">4. Select <B style="color:#00925F"><em>SIM 1 AND SIM 2</em></B>.
+                                                        <span style="font-size:16px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#595959">4. Select <B style="color:#00925F"><em>SIM 1 or SIM 2</em></B>.
                                                         </span>
                                                     </p>
                                                     <p style="text-align:center">
@@ -169,8 +169,8 @@
                                                         </span>
                                                     </p>
                                                     <p style="text-align:center">
-                                                        <img src="img/7.png" width="250" height="500" style="width: 250px; height: 500px;"/>
                                                         <img src="img/8.png" width="250" height="500" style="width: 250px; height: 500px;"/>
+                                                        <img src="img/9.png" width="250" height="500" style="width: 250px; height: 500px;"/>
                                                     </p>
                                                     
                                                     <!-- Next stage start here -->                                                            
