--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                                         </span>
                                                     </p>
                                                     <p>
-                                                        <span style="font-size:16px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#595959">4. Select <B style="color:#00925F"><em>SIM 1 AND SIM 2</em></B>.
+                                                        <span style="font-size:16px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#595959">4. Select <B style="color:#00925F"><em>SIM 1 or SIM 2</em></B>.
                                                         </span>
                                                     </p>
                                                     <p style="text-align:center">
@@ -244,7 +244,7 @@
                                                         </span>
                                                     </p>
                                                     <p>
-                                                        <span style="font-size:16px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#595959">5. Select <B style="color:#00925F"><em>Import to SIM Card</em></B>.&nbsp;&nbsp;<img src="img/oppo icons/Copy Contacts to Google Account/7.png" width="30" height="30" style="width: 30px; height: 30px;"/>
+                                                        <span style="font-size:16px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#595959">5. Select <B style="color:#00925F"><em>Import to SIM card</em></B>.&nbsp;&nbsp;<img src="img/oppo icons/Copy Contacts to Google Account/7.png" width="30" height="30" style="width: 30px; height: 30px;"/>
                                                         </span>
                                                     </p>
                                                     <p style="text-align:center">
