--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                                                     </p>
                                                     <p style="text-align:center">
                                                         <img src="img/1.png" width="250" height="500" style="width: 250px; height: 500px;"/>
+                                                        <img src="img/blinker.gif" width="70" height="70" style="width: 70px; height: 70px;"/>
                                                     </p>
                                                    
                                                    <!-- second step start here -->
