--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                                     
                                                     <p>
                                                         <strong>
-                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937">2341.</b>&nbsp;&nbsp;What internet speed can I expect on installing JioExtend?
+                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937">What internet speed can I expect on installing JioExtend?<hr>
                                                             </span>
                                                         </strong>
                                                     </p>
@@ -69,7 +69,7 @@
                                                 <div class='gi'>
                                                     <p>
                                                         <strong>
-                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937">6258.</b>&nbsp;&nbsp;What is the JioFiber Society Preview Offer?
+                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937">What is the JioFiber Society Preview Offer?<hr>
                                                             </span>
                                                         </strong>
                                                     </p>
@@ -106,7 +106,7 @@
                                                 <div class='gi'>
                                                     <p>
                                                         <strong>
-                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937"><b>2225.</b>&nbsp;&nbsp;I have not received | received an incorrect | expired cheque for my JioFiber security deposit refund
+                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937">I have not received | received an incorrect | expired cheque for my JioFiber security deposit refund<hr>
                                                             </span>
                                                         </strong>
                                                     </p>
@@ -203,7 +203,7 @@
                                                 <div class='gi'>
                                                     <p>
                                                         <strong>
-                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937"><b>6257.</b>&nbsp;&nbsp;JioFiber in-house wiring issues post installation or repair
+                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937">JioFiber in-house wiring issues post installation or repair<hr>
                                                             </span>
                                                         </strong>
                                                     </p>
@@ -259,7 +259,7 @@
                                                 <div class='gi'>
                                                     <p>
                                                         <strong>
-                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937"><b>2410.</b>&nbsp;&nbsp;I am facing frequent internet disconnection with my JioFiber connection. What should I do?
+                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937">I am facing frequent internet disconnection with my JioFiber connection. What should I do?<hr>
                                                             </span>
                                                         </strong>
                                                     </p>
@@ -318,7 +318,7 @@
                                                 <div class='gi'>
                                                     <p>
                                                         <strong>
-                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937"><b>7042.</b>&nbsp;&nbsp;I have received an SMS from Jio for JioFiber Security Deposit cheque bounce, what should I do?
+                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937">I have received an SMS from Jio for JioFiber Security Deposit cheque bounce, what should I do?<hr>
                                                             </span>
                                                         </strong>
                                                     </p>
@@ -343,7 +343,7 @@
                                                 <div class='gi'>
                                                     <p>
                                                         <strong>
-                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937"><b>2164.</b>&nbsp;&nbsp;The power adaptor provided with the JioFiber has stopped working. What should I do?
+                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937">The power adaptor provided with the JioFiber has stopped working. What should I do?<hr>
                                                             </span>
                                                         </strong>
                                                     </p>
@@ -391,7 +391,7 @@
                                                 <div class='gi'>
                                                     <p>
                                                         <strong>
-                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937"><b>5018.</b>&nbsp;&nbsp;I am unable to change my JioFiber password via Jio.com | MyJio App. What should I do?
+                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937">I am unable to change my JioFiber password via Jio.com | MyJio App. What should I do?<hr>
                                                             </span>
                                                         </strong>
                                                     </p>
@@ -460,7 +460,7 @@
                                                 <div class='gi'>
                                                     <p>
                                                         <strong>
-                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937"><b>2182.</b>&nbsp;&nbsp;I want to shift my JioFiber ONT (Router) location in my Home from one place to another?
+                                                            <span style="font-size:19px;font-family:&#39;Myriad Pro&#39;,&#39;sans-serif&#39;;color:#d54937">I want to shift my JioFiber ONT (Router) location in my Home from one place to another?<hr>
                                                             </span>
                                                         </strong>
                                                     </p>
